tests/fixtures/ast-audit/fail/require-http.ts
// CommonJS require of forbidden module: must be caught by AST audit.
const http = require('http');
export const server = http.createServer();
